--- a/.gitignore
+++ b/.gitignore
@@ -10,13 +10,13 @@
 /[Ll]ogs/
 /[Mm]emoryCaptures/
 
-ludum47-game/Library/
-ludum47-game/Temp/
-ludum47-game/Obj/
-ludum47-game/Build/
-ludum47-game/Builds/
-ludum47-game/Logs/
-ludum47-game/MemoryCaptures/
+Ludum47/Library/
+Ludum47/Temp/
+Ludum47/Obj/
+Ludum47/Build/
+Ludum47/Builds/
+Ludum47/Logs/
+Ludum47/MemoryCaptures/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
